tests/err_garbage_after.json.err
Parse error at line 1

001: {} !
        ^
Garbage after JSON string!
